# RemoteIO

./: .gitignore  Cargo.toml  README.md
RemoteIO-app/: Cargo.toml  Makefile  Makefile.mak  README.md  build.rs
RemoteIO-app/RemoteIO-core/: Cargo.toml
RemoteIO-app/RemoteIO-core/src/: lib.rs
RemoteIO-app/RemoteIO-core/src/audio/devices/: device.rs  devicecoordinator.rs  deviceswitch.rs  mod.rs  switchboard.rs
RemoteIO-app/RemoteIO-core/src/audio/streams/: devicecoordold.rs  deviceforwarder.rs
RemoteIO-app/c-src/: HsFFI.h  Lib.h  Makefile  hello-world.c  hello-world.h  wrapper.h
RemoteIO-app/src/: app.rs  main.rs
RemoteIO-app/src/audio/streams/: devicecoordinator.rs  mod.rs
backend/: Cargo.toml
backend/src/: client.rs  lib.rs  server.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src-tauri/: Cargo.toml
frontend/src-tauri/src/: main.rs
frontend/src/components/: Client.jsx  Server.jsx  Tab.jsx  Tabs.jsx
playground/: Cargo.toml
playground/src/: client.rs  cpal.rs  server.rs  sync_client.rs  sync_server.rs
shared/: Cargo.toml
shared/src/: lib.rs
sip-processor/: ChangeLog.md  Makefile  README.md  package.yaml  sip-processor.cabal
sip-processor/app/: Main.hs
sip-processor/c-bind/: Lib.hs  hs_lib.c
sip-processor/c-src/: hs_lib.c
sip-processor/src/: Lib.hs
src/: client.rs  lib.rs  server.rs
