[package]
name = "remoteio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
cpal = "0.15.1"
ringbuf = "0.3.2"
futures = "0.3.27"
bytes = "1.4.0"
tokio-tungstenite = "0.18.0"
bincode = "1.3.3"
serde = { version = "1.0.159", features = ["derive"] }
async-trait = "0.1.68"


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
