[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remoteio-shared = { path = "../shared" }
remoteio-backend = { path = "../backend" }
tokio = { version = "1", features = ["full"] }
cpal = "0.15.1"
futures = "0.3.27"
async-std = "1.12.0"

[[bin]]
name = "client"
path = "src/client.rs"


[[bin]]
name = "server"
path = "src/server.rs"
